# ubibot-platform-open

./: .gitignore  Dockerfile  SKILL.md  build.ps1  build.sh  config.yaml  go.mod  go.sum
admin/: .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
admin/src/: App.tsx  index.css  main.tsx
admin/src/api/: alert.ts  apikey.ts  auth.ts  client.ts  command.ts  dashboard.ts  device.ts  dict.ts  errors.ts  fileasset.ts  icon.ts  notification.ts  ota.ts  param.ts  rbac.ts  schedule.ts  system.ts
admin/src/components/: LanguageSwitcher.tsx  PagePlaceholder.tsx  RelativeTime.tsx  RequireAuth.tsx
admin/src/constants/: model.ts
admin/src/contexts/: AuthContext.tsx  ThemeContext.tsx
admin/src/hooks/: useFieldIcons.tsx
admin/src/i18n/: index.ts  useAntdLocale.ts
admin/src/layouts/: AppLayout.tsx
admin/src/router/: menu.tsx
admin/src/utils/: csv.ts  sensorValue.ts  svg.ts
cmd/server/: main.go
csrc/: Makefile
csrc/include/: ub_json.h  ub_protocol.h  ub_sha256.h  ub_transport.h  ub_transport_posix.h
csrc/src/: ub_json.c  ub_protocol.c  ub_transport_posix.c
csrc/test/: test_integration.c  test_protocol.c  test_sha256.c  ub_test.h
docs/: UbiBot开放平台硬件通信协议.docx  UbiBot开放平台硬件通信协议.md  UbiBot智能物联网开放平台后台的功能列表.md  protocol.md
internal/api/: alert.go  device.go  deviceconfig.go  fielddef.go  handlers.go  handlers_test.go  ingest.go  router.go  rule.go  telemetry.go
internal/auth/: nonce.go
internal/coap/: server.go
internal/config/: config.go
internal/database/: db.go
internal/ha/: client.go
internal/models/: models.go
internal/mqttbroker/: broker.go
internal/protocol/: payload.go
internal/rule/: engine.go
internal/store/: store.go
internal/telemetry/: buffer.go
server/: go.mod  go.sum
server/cmd/server/: main.go
server/internal/api/: admin_handlers.go  alert_handlers.go  apikey_handlers.go  dashboard_handlers.go  device_handlers.go  device_status_test.go  dict_handlers.go  fileasset_handlers.go  handlers_test.go  httpx.go  icon_handlers.go  keybind_handlers.go  middleware.go  notification_handlers.go  router.go  (+12 more)
simulation/: CMakeLists.txt  Makefile  README.md
simulation/app/include/: ub_device.h  ub_platform.h  ub_sensors.h  ub_storage.h
simulation/app/src/: main.c  ub_device.c  ub_platform_host.c  ub_sensors_sim.c  ub_storage_file.c
simulation/core/include/: ub_hmac_sha256.h  ub_json.h  ub_protocol.h  ub_sha256.h
simulation/core/src/: ub_hmac_sha256.c  ub_json.c  ub_protocol.c  ub_sha256.c
simulation/freertos_port/: README.md  ub_platform_freertos_skeleton.c  ub_storage_nvs_skeleton.c  ub_transport_lwip_skeleton.c
simulation/test/: mock_server.py  test_integration.c  test_protocol.c  ub_test.h
simulation/transport/include/: ub_transport.h  ub_transport_sockets.h
simulation/transport/src/: ub_transport_sockets.c
(+126 files in other folders)
